Feat : Implemented New ADV Image Generation
